HVAC Backup 2/objects/Product_Family__c(1).object
<CustomObject>
    <fields>
        <fullName>AMC_PMS_Events_Days__c</fullName>
        <label>AMC PMS Events Days</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AMC_PMS_Events__c</fullName>
        <label>AMC PMS Events</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <externalId>true</externalId>
        <label>Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Division_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Division</label>
        <referenceTo>Division__c</referenceTo>
        <relationshipLabel>Product Families</relationshipLabel>
        <relationshipName>Product_Families</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Division</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IDU__c</fullName>
        <defaultValue>1</defaultValue>
        <label>IDU</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Critical__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Critical?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Customer_Care_App__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Customer Care App?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Speciality_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Speciality Product?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Unitary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Unitary?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NIC_Installation_Charges__c</fullName>
        <label>NIC Installation Charges</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ODU__c</fullName>
        <defaultValue>1</defaultValue>
        <label>ODU</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMS_Events_Days__c</fullName>
        <label>Warranty PMS Events Days (NAMO)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMS_Events__c</fullName>
        <label>Warranty PMS Events (Namo)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Product_Family_Code__c</fullName>
        <label>Parent Product Family Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Product_Family__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Family</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product_Family__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Product Family</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product_Family__c</referenceTo>
        <relationshipLabel>Product Families</relationshipLabel>
        <relationshipName>Product_Families</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Department_Name__c</fullName>
        <formula>Sales_Department_No__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Department Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Department_No_SAP__c</fullName>
        <label>Sales Department No SAP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Department_No__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Department</label>
        <referenceTo>Department__c</referenceTo>
        <relationshipLabel>Product Families</relationshipLabel>
        <relationshipName>Product_Families</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Department_Name__c</fullName>
        <formula>Service_Department_No__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Department Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Department_No_SAP__c</fullName>
        <label>Service Department No SAP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Department_No__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Department</label>
        <referenceTo>Department__c</referenceTo>
        <relationshipLabel>Product Families (Service Department No)</relationshipLabel>
        <relationshipName>Product_Families1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Product Family</fullName>
                </value>
                <value>
                    <fullName>Product Sub Family</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Warranty_PMS_Events_CPAG__c</fullName>
        <label>Warranty PMS Events (CPAG)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Warranty_PMS_Events_CPSD__c</fullName>
        <label>Warranty PMS Events (CPSD)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Warranty_PMS_Events_CRBG__c</fullName>
        <label>Warranty PMS Events (CRBG)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Warranty_PMS_Events_Commercial__c</fullName>
        <label>Warranty PMS Events (Commercial)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Warranty_PMS_Events_Days_Commercial__c</fullName>
        <label>Warranty PMS Events Days (Commercial)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warranty_PMS_Events_Days_Residential__c</fullName>
        <label>Warranty PMS Events Days (Residential)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warranty_PMS_Events_Residential__c</fullName>
        <label>Warranty PMS Events (Residential)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Work_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PMS Work Type</label>
        <referenceTo>WorkType</referenceTo>
        <relationshipLabel>Product Families</relationshipLabel>
        <relationshipName>Product_Families</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Year_of_Lifespan__c</fullName>
        <label>Year of Lifespan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Product Family</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Parent_Product_Family__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>Service_Department_No__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Code__c</columns>
        <columns>Division_Lookup__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Product_Family__c.Product_Family</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Demo</fullName>
        <booleanFilter>1 OR 2 OR 3 OR 4</booleanFilter>
        <columns>NAME</columns>
        <columns>Code__c</columns>
        <columns>Division_Lookup__c</columns>
        <columns>Parent_Product_Family__c</columns>
        <columns>Service_Department_No__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Service_Department_No__c</field>
            <operation>contains</operation>
            <value>43</value>
        </filters>
        <filters>
            <field>Service_Department_No__c</field>
            <operation>contains</operation>
            <value>52</value>
        </filters>
        <filters>
            <field>Service_Department_No__c</field>
            <operation>contains</operation>
            <value>58</value>
        </filters>
        <filters>
            <field>Service_Department_No__c</field>
            <operation>contains</operation>
            <value>50</value>
        </filters>
        <label>Demo</label>
    </listViews>
    <listViews>
        <fullName>Parent_Product_Family</fullName>
        <columns>NAME</columns>
        <columns>Code__c</columns>
        <columns>Division_Lookup__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Service_Department_No__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Product_Family__c.Product_Family</value>
        </filters>
        <label>Product Family</label>
    </listViews>
    <listViews>
        <fullName>Product_Sub_Family</fullName>
        <columns>NAME</columns>
        <columns>Parent_Product_Family__c</columns>
        <columns>Code__c</columns>
        <columns>Division_Lookup__c</columns>
        <columns>Sales_Department_No__c</columns>
        <columns>Service_Department_No__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Product_Family__c.Product_Sub_Family</value>
        </filters>
        <label>Product Sub Family</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Families</pluralLabel>
    <recordTypes>
        <fullName>Product_Family</fullName>
        <active>true</active>
        <label>Product Family</label>
    </recordTypes>
    <recordTypes>
        <fullName>Product_Sub_Family</fullName>
        <active>true</active>
        <label>Product Sub Family</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>If_type_is_product_sub_family</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    RecordType.Name = &apos;Product Sub Family&apos;,
    ISBLANK(Parent_Product_Family__c)
)</errorConditionFormula>
        <errorDisplayField>Parent_Product_Family__c</errorDisplayField>
        <errorMessage>If the Product Family Type is &apos;Product Sub Family, please select the Parent Product Family.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PMS_Events_range_validation</fullName>
        <active>true</active>
        <errorConditionFormula>IF( 
    OR (PMS_Events__c &gt; 12, 
        PMS_Events__c &lt; 0,
        AMC_PMS_Events__c &gt; 12, 
        AMC_PMS_Events__c &lt; 0 )
 , true, false)</errorConditionFormula>
        <errorMessage>The number of PMS events can range between 0 and 12 only.</errorMessage>
    </validationRules>
</CustomObject>